<resources>
    <string name="app_name">mvplogin</string>
    <string name="login">登录</string>
    <string name="login_hint">请输入用户名</string>
    <string name="password">密码</string>
    <string name="btnlogin">登录</string>
    <string name="btncancel">取消</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="btregister">注册</string>
    <string name="phoneLogin">手机登录</string>
    <string name="tvVerifyCode">获取手机验证码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
